fix: alignment of numeric values

--- a/src/styles/gcs-sheet/_base.scss
+++ b/src/styles/gcs-sheet/_base.scss
@@ -84,6 +84,7 @@ body {
   line-height: var(--gcs-input-height);
   cursor: pointer;
   padding-right: 0.25rem;
+  text-align: center;
 
   span {
     width: 100%;
